ir/UnifiedIRParser.py
# Generated from UnifiedIRParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class UnifiedIRParser ( Parser ):

    grammarFileName = "UnifiedIRParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'which one has the'", 
                     "'how many'", "'whether'", "'of'", "'from'", "'to'", 
                     "'among'", "'top'", "<INVALID>", "'the'", "'whose'", 
                     "'that'", "'has'", "'not'", "'('", "')'", "'forward'", 
                     "'backward'", "'and'", "'or'", "'sum'", "'average'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'at least'", "'at most'", "<INVALID>", "<INVALID>", 
                     "'text'", "'number'", "'date'", "'year'", "'time'", 
                     "' '", "'<ES>'", "'</ES>'", "'<E>'", "'<A>'", "'<R>'", 
                     "'<C>'", "'<Q>'", "'<V>'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'</E>'", "'</A>'", "'</R>'", 
                     "'</C>'", "'</Q>'", "'</V>'" ]

    symbolicNames = [ "<INVALID>", "WS", "What", "Select", "Count", "Verify", 
                      "Of", "From", "To", "Among", "Top", "Ones", "The", 
                      "Whose", "That", "Has", "Not", "LB", "RB", "Forward", 
                      "Backward", "And", "Or", "Sum", "Average", "Is", "IsNot", 
                      "LargerThan", "SmallerThan", "AtLeast", "AtMost", 
                      "Largest", "Smallest", "Text", "Quantity", "Date", 
                      "Year", "Time", "SPACE", "ES_START", "ES_END", "ENTI_START", 
                      "ATTR_START", "PRED_START", "CONC_START", "QUAL_START", 
                      "VALU_START", "INTEGER", "DECIMAL", "DIGIT", "STRING_LITERAL", 
                      "ENTI_END", "ATTR_END", "PRED_END", "CONC_END", "QUAL_END", 
                      "VALU_END", "LITERAL" ]

    RULE_root = 0
    RULE_entityQuery = 1
    RULE_attributeQuery = 2
    RULE_predicateQuery = 3
    RULE_qualifierQuery = 4
    RULE_countQuery = 5
    RULE_verifyQuery = 6
    RULE_selectQuery = 7
    RULE_valueQuery = 8
    RULE_verify = 9
    RULE_entitySet = 10
    RULE_filterFromEntitySet = 11
    RULE_filterByRank = 12
    RULE_filterByAttribute = 13
    RULE_filterByPredicate = 14
    RULE_filterByQualifier = 15
    RULE_direction = 16
    RULE_setOP = 17
    RULE_logicGate = 18
    RULE_symbolOP = 19
    RULE_stringOP = 20
    RULE_aggregateOP = 21
    RULE_valueSet = 22
    RULE_valueType = 23
    RULE_entity = 24
    RULE_attribute = 25
    RULE_concept = 26
    RULE_predicate = 27
    RULE_qualifier = 28
    RULE_value = 29
    RULE_number = 30
    RULE_string = 31

    ruleNames =  [ "root", "entityQuery", "attributeQuery", "predicateQuery", 
                   "qualifierQuery", "countQuery", "verifyQuery", "selectQuery", 
                   "valueQuery", "verify", "entitySet", "filterFromEntitySet", 
                   "filterByRank", "filterByAttribute", "filterByPredicate", 
                   "filterByQualifier", "direction", "setOP", "logicGate", 
                   "symbolOP", "stringOP", "aggregateOP", "valueSet", "valueType", 
                   "entity", "attribute", "concept", "predicate", "qualifier", 
                   "value", "number", "string" ]

    EOF = Token.EOF
    WS=1
    What=2
    Select=3
    Count=4
    Verify=5
    Of=6
    From=7
    To=8
    Among=9
    Top=10
    Ones=11
    The=12
    Whose=13
    That=14
    Has=15
    Not=16
    LB=17
    RB=18
    Forward=19
    Backward=20
    And=21
    Or=22
    Sum=23
    Average=24
    Is=25
    IsNot=26
    LargerThan=27
    SmallerThan=28
    AtLeast=29
    AtMost=30
    Largest=31
    Smallest=32
    Text=33
    Quantity=34
    Date=35
    Year=36
    Time=37
    SPACE=38
    ES_START=39
    ES_END=40
    ENTI_START=41
    ATTR_START=42
    PRED_START=43
    CONC_START=44
    QUAL_START=45
    VALU_START=46
    INTEGER=47
    DECIMAL=48
    DIGIT=49
    STRING_LITERAL=50
    ENTI_END=51
    ATTR_END=52
    PRED_END=53
    CONC_END=54
    QUAL_END=55
    VALU_END=56
    LITERAL=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(UnifiedIRParser.EOF, 0)

        def entityQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntityQueryContext,0)


        def attributeQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.AttributeQueryContext,0)


        def predicateQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.PredicateQueryContext,0)


        def qualifierQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.QualifierQueryContext,0)


        def countQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.CountQueryContext,0)


        def verifyQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.VerifyQueryContext,0)


        def selectQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.SelectQueryContext,0)


        def valueQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.ValueQueryContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)




    def root(self):

        localctx = UnifiedIRParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 64
                self.entityQuery()
                pass

            elif la_ == 2:
                self.state = 65
                self.attributeQuery()
                pass

            elif la_ == 3:
                self.state = 66
                self.predicateQuery()
                pass

            elif la_ == 4:
                self.state = 67
                self.qualifierQuery()
                pass

            elif la_ == 5:
                self.state = 68
                self.countQuery()
                pass

            elif la_ == 6:
                self.state = 69
                self.verifyQuery()
                pass

            elif la_ == 7:
                self.state = 70
                self.selectQuery()
                pass

            elif la_ == 8:
                self.state = 71
                self.valueQuery()
                pass


            self.state = 74
            self.match(UnifiedIRParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_entityQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityQuery" ):
                listener.enterEntityQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityQuery" ):
                listener.exitEntityQuery(self)




    def entityQuery(self):

        localctx = UnifiedIRParser.EntityQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entityQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(UnifiedIRParser.What)
            self.state = 77
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def attribute(self):
            return self.getTypedRuleContext(UnifiedIRParser.AttributeContext,0)


        def Of(self):
            return self.getToken(UnifiedIRParser.Of, 0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_attributeQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeQuery" ):
                listener.enterAttributeQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeQuery" ):
                listener.exitAttributeQuery(self)




    def attributeQuery(self):

        localctx = UnifiedIRParser.AttributeQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attributeQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(UnifiedIRParser.What)
            self.state = 80
            self.attribute()
            self.state = 81
            self.match(UnifiedIRParser.Of)
            self.state = 82
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def From(self):
            return self.getToken(UnifiedIRParser.From, 0)

        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)


        def To(self):
            return self.getToken(UnifiedIRParser.To, 0)

        def getRuleIndex(self):
            return UnifiedIRParser.RULE_predicateQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateQuery" ):
                listener.enterPredicateQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateQuery" ):
                listener.exitPredicateQuery(self)




    def predicateQuery(self):

        localctx = UnifiedIRParser.PredicateQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_predicateQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(UnifiedIRParser.What)
            self.state = 85
            self.match(UnifiedIRParser.From)
            self.state = 86
            self.entitySet()
            self.state = 87
            self.match(UnifiedIRParser.To)
            self.state = 88
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifierQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def qualifier(self):
            return self.getTypedRuleContext(UnifiedIRParser.QualifierContext,0)


        def Of(self):
            return self.getToken(UnifiedIRParser.Of, 0)

        def verify(self):
            return self.getTypedRuleContext(UnifiedIRParser.VerifyContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_qualifierQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifierQuery" ):
                listener.enterQualifierQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifierQuery" ):
                listener.exitQualifierQuery(self)




    def qualifierQuery(self):

        localctx = UnifiedIRParser.QualifierQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_qualifierQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(UnifiedIRParser.What)
            self.state = 91
            self.qualifier()
            self.state = 92
            self.match(UnifiedIRParser.Of)
            self.state = 93
            self.verify()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CountQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Count(self):
            return self.getToken(UnifiedIRParser.Count, 0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_countQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCountQuery" ):
                listener.enterCountQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCountQuery" ):
                listener.exitCountQuery(self)




    def countQuery(self):

        localctx = UnifiedIRParser.CountQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_countQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(UnifiedIRParser.Count)
            self.state = 96
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerifyQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Verify(self):
            return self.getToken(UnifiedIRParser.Verify, 0)

        def verify(self):
            return self.getTypedRuleContext(UnifiedIRParser.VerifyContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_verifyQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerifyQuery" ):
                listener.enterVerifyQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerifyQuery" ):
                listener.exitVerifyQuery(self)




    def verifyQuery(self):

        localctx = UnifiedIRParser.VerifyQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_verifyQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(UnifiedIRParser.Verify)
            self.state = 99
            self.verify()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Select(self):
            return self.getToken(UnifiedIRParser.Select, 0)

        def filterByRank(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByRankContext,0)


        def Among(self):
            return self.getToken(UnifiedIRParser.Among, 0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_selectQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectQuery" ):
                listener.enterSelectQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectQuery" ):
                listener.exitSelectQuery(self)




    def selectQuery(self):

        localctx = UnifiedIRParser.SelectQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(UnifiedIRParser.Select)
            self.state = 102
            self.filterByRank()
            self.state = 103
            self.match(UnifiedIRParser.Among)
            self.state = 104
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def valueSet(self):
            return self.getTypedRuleContext(UnifiedIRParser.ValueSetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_valueQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueQuery" ):
                listener.enterValueQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueQuery" ):
                listener.exitValueQuery(self)




    def valueQuery(self):

        localctx = UnifiedIRParser.ValueQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_valueQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(UnifiedIRParser.What)
            self.state = 107
            self.valueSet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerifyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_verify

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VerifyByPredicateContext(VerifyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.VerifyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)

        def filterByPredicate(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByPredicateContext,0)

        def filterByQualifier(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByQualifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerifyByPredicate" ):
                listener.enterVerifyByPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerifyByPredicate" ):
                listener.exitVerifyByPredicate(self)


    class VerifyByAttributeContext(VerifyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.VerifyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)

        def filterByAttribute(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByAttributeContext,0)

        def filterByQualifier(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByQualifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerifyByAttribute" ):
                listener.enterVerifyByAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerifyByAttribute" ):
                listener.exitVerifyByAttribute(self)



    def verify(self):

        localctx = UnifiedIRParser.VerifyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_verify)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = UnifiedIRParser.VerifyByAttributeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.entitySet()
                self.state = 110
                self.filterByAttribute()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==UnifiedIRParser.LB:
                    self.state = 111
                    self.filterByQualifier()


                pass

            elif la_ == 2:
                localctx = UnifiedIRParser.VerifyByPredicateContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.entitySet()
                self.state = 115
                self.filterByPredicate()
                self.state = 116
                self.entitySet()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==UnifiedIRParser.LB:
                    self.state = 117
                    self.filterByQualifier()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntitySetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_entitySet

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EntitySetGroupContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ES_START(self):
            return self.getToken(UnifiedIRParser.ES_START, 0)
        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)

        def setOP(self):
            return self.getTypedRuleContext(UnifiedIRParser.SetOPContext,0)

        def ES_END(self):
            return self.getToken(UnifiedIRParser.ES_END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetGroup" ):
                listener.enterEntitySetGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetGroup" ):
                listener.exitEntitySetGroup(self)


    class EntitySetIntersectContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ES_START(self):
            return self.getToken(UnifiedIRParser.ES_START, 0)
        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)

        def LB(self):
            return self.getToken(UnifiedIRParser.LB, 0)
        def RB(self):
            return self.getToken(UnifiedIRParser.RB, 0)
        def ES_END(self):
            return self.getToken(UnifiedIRParser.ES_END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetIntersect" ):
                listener.enterEntitySetIntersect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetIntersect" ):
                listener.exitEntitySetIntersect(self)


    class EntitySetAtomContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entity(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntityContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetAtom" ):
                listener.enterEntitySetAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetAtom" ):
                listener.exitEntitySetAtom(self)


    class EntitySetPlaceholderContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Ones(self):
            return self.getToken(UnifiedIRParser.Ones, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetPlaceholder" ):
                listener.enterEntitySetPlaceholder(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetPlaceholder" ):
                listener.exitEntitySetPlaceholder(self)


    class EntitySetFilterContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ES_START(self):
            return self.getToken(UnifiedIRParser.ES_START, 0)
        def filterFromEntitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterFromEntitySetContext,0)

        def ES_END(self):
            return self.getToken(UnifiedIRParser.ES_END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetFilter" ):
                listener.enterEntitySetFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetFilter" ):
                listener.exitEntitySetFilter(self)



    def entitySet(self):

        localctx = UnifiedIRParser.EntitySetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_entitySet)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = UnifiedIRParser.EntitySetGroupContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(UnifiedIRParser.ES_START)
                self.state = 123
                self.entitySet()
                self.state = 124
                self.setOP()
                self.state = 125
                self.entitySet()
                self.state = 126
                self.match(UnifiedIRParser.ES_END)
                pass

            elif la_ == 2:
                localctx = UnifiedIRParser.EntitySetIntersectContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(UnifiedIRParser.ES_START)
                self.state = 129
                self.entitySet()
                self.state = 130
                self.match(UnifiedIRParser.LB)
                self.state = 131
                self.entitySet()
                self.state = 132
                self.match(UnifiedIRParser.RB)
                self.state = 133
                self.match(UnifiedIRParser.ES_END)
                pass

            elif la_ == 3:
                localctx = UnifiedIRParser.EntitySetFilterContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(UnifiedIRParser.ES_START)
                self.state = 136
                self.filterFromEntitySet()
                self.state = 137
                self.match(UnifiedIRParser.ES_END)
                pass

            elif la_ == 4:
                localctx = UnifiedIRParser.EntitySetAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 139
                self.entity()
                pass

            elif la_ == 5:
                localctx = UnifiedIRParser.EntitySetPlaceholderContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 140
                self.match(UnifiedIRParser.Ones)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterFromEntitySetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_filterFromEntitySet

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EntitySetByPredicateContext(FilterFromEntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.FilterFromEntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def filterByPredicate(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByPredicateContext,0)

        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)
